# animation-toolkit

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake_modules/: FindGraphviz.cmake
src/: constants.cpp  constants.h  main.cpp  scene_graph.h
src/animation/: animation.h  director.h  schedule_window.h  scheduler.h  sfml_clock_timer.h  timeline.h  timestamp.h
src/entities/: arrow.h  buildable.h  curve.h  dot.h  empty.h  grid.h  indicator_light.h  local_boundable.h  ring.h  shader_cache.h
src/graph/: graphviz_parser.h  pebblegame.h
src/rendering/: renderer.h
src/utils/: bounds.h  color.h  common_manipulations.h  proportional_quantity.h  sequencer.h  transforms.h
